# rinha-2025

./: Cargo.toml  Dockerfile  README.md  build-docker.sh  docker-compose.yml  nginx.conf  partial-results.json
pkg/connection/: Cargo.toml
pkg/connection/src/: lib.rs
pkg/load-balance/: Cargo.toml
pkg/load-balance/src/: _lib.rs  lib.rs  worker_poll.rs
pkg/message/: Cargo.toml
pkg/message/src/: lib.rs  socket.rs
pkg/message/src/http/: mod.rs  parse.rs  response.rs
pkg/worker/: Cargo.toml
pkg/worker/src/: lib.rs
resources/: k6-util.js  rinha.js  run-tests.sh  summary.js
src/: main.rs
