[package]
name = "rinha-2025"
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
mimalloc = "0.1.47"
mio = { version = "1", features = ["net", "os-poll", "os-ext"] }

[workspace]
members = [
    "./pkg/worker",
    "./pkg/load-balance",
    "./pkg/connection",
    "./pkg/message",
]

[dependencies]
worker = { path = "./pkg/worker" }
load-balance = { path = "./pkg/load-balance" }

[profile.release]
opt-level = 3
debug = false
split-debuginfo = 'off'
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false
strip = true


[profile.release.package."*"]
opt-level = 3
codegen-units = 1
